Use new Locale method call to replace the old deprecated one